crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__skip_on_transparent_wrapper_in_enum_struct_variant.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Event, UserId).unwrap()"
---
? namespace: ROOT
  name: Event
: ENUM:
    - 0:
        SignIn:
          - STRUCT:
              - label:
                  - STR
                  - []
          - []
    - EXTERNAL
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
