crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__struct_field_optional_proxy_newtype.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Holder, UserId, OptionalUserId).unwrap()"
---
? namespace: ROOT
  name: Holder
: STRUCT:
    - - user_id:
          - TYPENAME:
              namespace: ROOT
              name: OptionalUserId
          - []
    - []
? namespace: ROOT
  name: OptionalUserId
: NEWTYPESTRUCT:
    - OPTION:
        TYPENAME:
          namespace: ROOT
          name: UserId
    - - Proxy for optional opaque lattice IDs.
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
