crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__struct_with_bytes_and_opaque_proxy_fields.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Mixed, UserId).unwrap()"
---
? namespace: ROOT
  name: Mixed
: STRUCT:
    - - payload:
          - BYTES
          - []
      - user_id:
          - TYPENAME:
              namespace: ROOT
              name: UserId
          - []
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
