crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__transparent_wrapper_with_namespace_and_opaque_proxy.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Parent, UserId).unwrap()"
---
? namespace: ROOT
  name: Parent
: STRUCT:
    - - wrapped:
          - TYPENAME:
              namespace: ROOT
              name: UserId
          - []
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
? namespace:
    NAMED: wrappers
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
