crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__tree_enum_with_opaque_proxy_in_struct_variant.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Tree, UserId).unwrap()"
---
? namespace: ROOT
  name: Tree
: ENUM:
    - 0:
        Leaf:
          - STRUCT:
              - owner_id:
                  - TYPENAME:
                      namespace: ROOT
                      name: UserId
                  - []
          - []
      1:
        Branch:
          - STRUCT:
              - children:
                  - SEQ:
                      TYPENAME:
                        namespace: ROOT
                        name: Tree
                  - []
          - []
    - EXTERNAL
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
